Bug 341663 - Dialog requesting password for online update doesn't say for which account
Summary: Dialog requesting password for online update doesn't say for which account
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-08 17:43 UTC by Jack
Modified: 2018-03-28 07:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2014-12-08 17:43:17 UTC
If you do an online update, if KMM does not have a password stored, it pops up a dialog reqeusting the password.  However, this dialog does not mention the account name.  If you are only updating one account, this is not a problem.  However, if you select the menu item to update all accounts, there is no way to know for which account the password is being requested.

Reproducible: Always

Steps to Reproduce:
1. Be sure at least one online account does not have the password stored
2. Select Account/Update All Accounts...
3.

Actual Results:  
Popup requesting the password does not mention which account.

Expected Results:  
The popup should include the name of the account.
Comment 1 Thomas Baumgart 2017-12-31 14:06:53 UTC
Git commit f70311d1bbbf1c637d659f200d184c22902b6c4e by Thomas Baumgart.
Committed on 31/12/2017 at 14:05.
Pushed by tbaumgart into branch 'master'.

Present account name when asking for password

Fix usage of i18n() to make this work again
FIXED-IN: 5.0

M  +1    -1    kmymoney/plugins/ofx/import/dialogs/mymoneyofxconnector.cpp

https://commits.kde.org/kmymoney/f70311d1bbbf1c637d659f200d184c22902b6c4e
Comment 2 Pino Toscano 2018-01-01 12:04:43 UTC
This fix is wrong: arguments to i18n*() functions are passed directly to the functions themselves, not using arg(); this will produce runtime warnings.

What was the issue with the previous code?
Comment 3 Thomas Baumgart 2018-01-01 15:47:51 UTC
I have reverted commit f70311d1bbbf1c637d659f200d184c22902b6c4e. Apparently, the problem was already fixed but the bug was not closed.