Present account name when asking for password

Fix usage of i18n() to make this work again

BUG: 341663
FIXED-IN: 5.0